# api-test-petshop

./: .env  .gitignore  README.md  conftest.py  makefile  pyproject.toml
api/: api_client.py
assertions/: assert_pets.py
data/: pet_types.py
models/: pet_models.py
tests/: test_pet.py
