[tool.poetry]
name = "api-test-petshop"
version = "0.0.1"
description = "try to write api tests"
authors = ["Roman Sergeev"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
python-dotenv = "^1.0.0"
httpx = "^0.25"
mimesis = "^11.1"
pydantic = "^2.4"
mypy = "^1.7"